<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ecg_app_native">ECG App Native</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="readings_history">Readings History</string>
    <string name="provisioning_wifi">Provisioning WiFi</string>
    <string name="profile">Profile</string>
    <string name="tambah_aksi">Tambah Aksi</string>
    <string name="dashboard">Dashboard</string>
    <string name="scan_qr">Scan QR</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="pindai_untuk_menambah_kerabat">Pindai untuk menambah kerabat:</string>
</resources>